tests/error/modifier_errors/dagger_loop2.err
Error: Invalid expression in dagger (at $FILE:8:8)
  | 
6 | def test(i: int) -> None:
7 |     with dagger:
8 |         while i < 46:
  |         ^^^^^^^^^^^^^
9 |             pass
  | ^^^^^^^^^^^^^^^^ Loop found in a dagger context

Help: The function test is declared with the unitary flag: `dagger=True`. Thus
dagger constraints apply to its body.

Guppy compilation failed due to 1 previous error
